--- a/.github/workflows/daily-pr.yml
+++ b/.github/workflows/daily-pr.yml
@@ -27,4 +27,4 @@ jobs:
           commit-message: "Daily update"
           title: "Daily update $(date)"
           body: "This PR was automatically generated on $(date)."
-          branch: daily-update-$(date +%Y-%m-%d)
+          branch: daily-update-${{ github.run_id }}
